Deploy/manifests/istioingressgw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontendvs
spec:
  hosts:
  - "*"
  gateways:
  - frontendgw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend

---
###########################################################
# Istio gateway using default ingressgateway service
###########################################################

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontendgw
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: oboutique 
    hosts:
    - "*"
